generated/manifests/prod-home/jellyfin/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
