generated/manifests/prod-home/jellyfin/NetworkPolicy-jellyfin-configuration-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-configuration-ingress
  namespace: jellyfin
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: jellyfin
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyfin-configuration
              app.kubernetes.io/name: jellarr
      ports:
        - port: 8096
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
