generated/manifests/prod-home/jellyfin/NetworkPolicy-seerr-configuration-jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seerr-configuration-jellyfin-ingress
  namespace: jellyfin
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
          podSelector:
            matchLabels:
              app.kubernetes.io/name: media-config-seerr
      ports:
        - port: 8096
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
